<resources>
    <string name="app_name">mTelegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Nikita</string>
    <string name="settings_default_status">в сети</string>
    <string name="settings_label_text_account">Аккаунт</string>
    <string name="settings_def_phone_number">+38011112233</string>
    <string name="settings_label_phone_number">Нажмите чтобы изменить номер телефона</string>
    <string name="settings_def_login">kokche</string>
    <string name="settings_label_default_bio">О себе</string>
    <string name="settings_menu_exit">Выход</string>
    <string name="settings_menu_change_name">Изменить имя</string>
    <string name="cd_register_image_view">register_image_view</string>
    <string name="register_text_enter_code">Введите код</string>
    <string name="register_text_we_sent">Мы отправили SMS с кодом проверки на Ваш телефон</string>
    <string name="register_hint_default_code">- - - - - -</string>
    <string name="register_title_your_phone">Ваш телефон</string>
    <string name="register_toast_enter_on">Введите номер телефона</string>
    <string name="app_drawer_items_name_create_group">Создать группу</string>
    <string name="app_drawer_items_name_create_secret_chat">Создать секретный чат</string>
    <string name="app_drawer_items_name_create_channel">Создать канал</string>
    <string name="app_drawer_items_name_contacts">Контакты</string>
    <string name="app_drawer_items_name_phone">Звонки</string>
    <string name="app_drawer_items_name_favorites">Избранное</string>
    <string name="app_drawer_items_name_settings">Настройки</string>
    <string name="app_drawer_items_name_invate_friends">Приглосить друзей</string>
    <string name="app_drawer_items_name_help">Вопросы о Телеграм</string>
    <string name="app_drawer_header_def_name">Nikita</string>
    <string name="app_drawer_header_def_number">+88002231</string>
    <string name="settings_label_default_user_name">Имя пользователя</string>
</resources>